# confbot

./: .gitignore  .gitlab-ci.yml  CONTRIBUTORS.txt  LICENSE  README.rst  local-ci.yml  local.yml  manage.py  production.yml  pyproject.toml  pytest.ini
.devcontainer/: devcontainer.json
.envs/.local_example/: .django  .postgres
app/: conftest.py
app/conference/: admin.py  apps.py  factories.py  listener.py  signals.py
app/conference/api/: category.py  channel.py  conference.py  course.py  slide.py
app/conference/migrations/: 0001_initial.py  0002_userconference_evaluation.py  0003_conference_active.py  0004_auto_20210411_2159.py  0005_conference_visible_to_all.py  0006_auto_20210416_1242.py  0007_auto_20210511_1612.py  0008_auto_20210522_2345.py  0009_auto_20210606_1649.py  0010_conference_alert_to_owner.py  0011_auto_20210805_0034.py
app/conference/models/: __init__.py  category.py  channel.py  conference.py  course.py  slide.py  user_conference.py
app/conference/services/: download_zip.py  upload_zip.py
app/conference/tasks/: __init__.py  general.py  upload_zip.py
app/conference/tests/: test_channel.py  test_conference.py  test_course.py  test_listeners.py  test_slide.py  test_upload_zip.py  test_user_conference.py
app/enterprise/: apps.py
app/enterprise/migrations/: 0001_initial.py
app/enterprise/models/: __init__.py  enterprise.py  enterprise_app.py  user_enterprise.py
app/metric/: admin.py  apps.py  factories.py
app/metric/api/: group_channel.py
app/metric/migrations/: 0001_initial.py
app/metric/models/: __init__.py  group_channel.py
app/metric/tests/: test_group_channel.py
app/templates/: base.html
app/users/: admin.py  apps.py  models.py  urls.py
app/users/api/: serializers.py  views.py
app/users/migrations/: 0001_initial.py  0002_auto_20210328_1903.py
app/utils/: auth_backends.py  custom_exception_handler.py  models.py  paginator.py  permissions.py  sentry_ckeck.py  telegram.py
config/: api_router.py  asgi.py  celery_app.py  urls.py  wsgi.py
config/settings/: base.py  local.py  production.py  test.py
docs/: conf.py  howto.rst  index.rst  make.bat  users.rst
locale/: README.rst
(+33 files in other folders)
